assets/css/style.css
/******************** Google Font Imports */
@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Staatliches&display=swap");

/******************** HTML and Body Reset and basic display settings */

body,
html {
  box-sizing: border-box;
}

body {
  padding: 0;
  margin: 0;
  display: flex;
  flex-direction: column;
  font-family: "Montserrat", sans-serif;
  background: black;
}

header,
footer {
  flex: none;
}

/******************** Nav Bar */

.navbar {
  width: 100%;
  padding: 0;
  text-align: right;
  z-index: 1;
}

/* 'Lava' render from Gimp Software (www.gimp.com) */
.banner-background {
  background: url("/assets/images/full-banner.png") no-repeat center center
    fixed;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
  padding: 0;
}

/* Radial gradient (centre transparent, outer black) */
/* https://www.quirksmode.org/css/images/position.html */
.banner-gradient {
  background: radial-gradient(at top, transparent 0%, black 70%);
  padding: inherit;
}

.navbar-brand {
  margin-right: 0;
  padding-top: 10px;
  text-align: center;
  color: #fafafa;
}

.navbar-toggler {
  border: none;
  padding-top: 20px;
}

.primary-link {
  color: #fafafa;
  font-weight: 500;
  letter-spacing: 2px;
}

.navbar-nav .nav-item .nav-link {
  padding-right: 15px;
  padding-left: 15px;
  margin-left: 10px;
  margin-right: 10px;
}

.navbar-nav .nav-link:focus,
.navbar-nav .nav-link:hover {
  color: #fafafa;
}

/*************** Headings */

.main-logo {
  margin: 0 auto;
}

.heading-text {
  text-align: center;
  font-family: "Staatliches", sans-serif;
  font-size: 4rem;
  letter-spacing: 6px;
}

.header-red {
  color: rgba(228, 22, 22, 0.75);
}

.header-white {
  color: #fafafa;
}

/*************** Main Body */

.body-content {
  background: black;
  overflow: auto;
  -webkit-overflow-scrolling: touch;
  flex: auto;
}

.main-features {
}

.hero-image {
  background: url("/assets/images/hero-image.jpg") no-repeat bottom right;
  -webkit-background-size: 60%;
  -moz-background-size: 60%;
  -o-background-size: 60%;
  background-size: 60%;

  width: 100%;
  height: 60%;
  position: absolute;
  bottom: 100px;
  padding: 0;
}

/**************** Footer */

.footer {
  height: 100px;
}

.footer .row {
  height: inherit;
}

.personal-logo {
  background-color: red;
}

.company-logo {
  background-color: blue;
}

.socials {
  background-color: yellow;
}

/*************** Media Queries */

/* Mobile View */

@media only screen and (max-width: 576px) {
  .heading-text {
    font-size: 3rem;
  }

  #navbarNavDropdown ul {
    position: absolute;
    right: 0;
  }

  .navbar-nav .nav-item .nav-link {
    padding-right: 15px;
  }

  /* Dropdown Transition */
  /* https://stackoverflow.com/questions/12115833/adding-a-slide-effect-to-bootstrap-dropdown */

  .navbar-collapse .navbar-nav {
    -webkit-transition: max-height 0.3s, opacity 0.2s 0.1s, visibility 0s 0.3s;
    -moz-transition: max-height 0.3s, opacity 0.2s 0.1s, visibility 0s 0.3s;
    -ms-transition: max-height 0.3s, opacity 0.2s 0.1s, visibility 0s 0.3s;
    -o-transition: max-height 0.3s, opacity 0.2s 0.1s, visibility 0s 0.3s;
    transition: max-height 0.3s, opacity 0.2s 0.1s, visibility 0s 0.3s;

    max-height: 0;
    display: block;
    overflow: hidden;
    opacity: 0;
    visibility: hidden;
  }

  .navbar-collapse.show .navbar-nav {
    -webkit-transition: max-height 0.3s, opacity 0.2s, visibility 0s;
    -moz-transition: max-height 0.3s, opacity 0.2s, visibility 0s;
    -ms-transition: max-height 0.3s, opacity 0.2s, visibility 0s;
    -o-transition: max-height 0.3s, opacity 0.2s, visibility 0s;
    transition: max-height 0.3s, opacity 0.2s, visibility 0s;

    max-height: 190px;
    opacity: 1;
    visibility: visible;
  }
  /*  /Dropdown Transition */

  .hero-image {
    background: url("/assets/images/hero-image.jpg") no-repeat bottom center;
    -webkit-background-size: 100%;
    -moz-background-size: 100%;
    -o-background-size: 100%;
    background-size: 100%;
  }
}

/*  /Mobile View */

/* Large Desktop View */

@media only screen and (min-width : 1200px) {

  .hero-image {
    background: url("/assets/images/hero-image.jpg") no-repeat bottom right;
    -webkit-background-size: 50%;
    -moz-background-size: 50%;
    -o-background-size: 50%;
    background-size: 50%;
  }

}


/* Extra Large Desktop View */

@media only screen and (min-width : 1400px) {

  .hero-image {
    background: url("/assets/images/hero-image.jpg") no-repeat bottom right;
    -webkit-background-size: 40%;
    -moz-background-size: 40%;
    -o-background-size: 40%;
    background-size: 40%;
  }

}

